# simsapa-dictionary

./: .env-example  .gitignore  .travis.yml  Cargo.toml  LICENSE.txt  Makefile  README.md  appveyor.yml  diesel.toml  dotenv-example
assets/: c5_html.txt  c5_plain.txt  content-page.xhtml  freedict-tei_formatted.xml  freedict-tei_plain.xml  latex_plain.tex  simsapa_md_to_epub.bat  simsapa_md_to_epub.sh  simsapa_md_to_mobi.bat  simsapa_md_to_mobi.sh  stardict_textual.xml  stardict_textual_html.xml  stardict_textual_plain.xml  xlsx_to_stardict.sh
assets/OEBPS/: about.md  copyright.md  cover.xhtml  entries-epub.xhtml  entries-mobi.xhtml  htmltoc.xhtml  package.opf  style.css  titlepage.xhtml  toc.ncx
assets/OEPBS/: about.md  copyright.md  entries.xhtml  nav.xhtml  package.opf  titlepage.xhtml
ci/: before_deploy.sh  bintray.descriptor.json
migrations/2021-02-03-151350_schema/: down.sql  up.sql
migrations/2021-02-03-151456_fts_indexes/: down.sql  up.sql
scripts/: all_po2json.sh  build_dicts_for_release.sh  combined_dict_md_paths.txt  combined_to_mobi.sh  convert_po.py  dict_md_paths.txt  dict_to_xlsx_sheets.txt  iped_convert.sh  json_to_md.sh  md_to_epub.sh  md_to_mobi.sh  ncped-tables.txt  ncped_json_to_md.sh  ncped_md_to_mobi.sh  ncped_tables.txt  ncped_to_babylon.sh  ncped_to_c5.sh  ncped_to_dict.sh  ncped_to_epub.sh  ncped_to_json.sh  ncped_to_md.sh  ncped_to_mobi.sh  ncped_to_stardict.sh  ncped_to_tei.sh  ncped_to_xlsx.sh  nyana_to_md.sh  pts_to_epub.sh  reindex_fts.sql  run_kindlegen.sh  sc_dicts_to_md.sh  simsapa_dicts_dist.sh  simsapa_dicts_release.sh  sources_to_markdown.sh  two_ncped.txt
src/: app.rs  cli.yml  db_models.rs  db_schema.rs  dict_word.rs  dictionary.rs  ebook.rs  error.rs  helpers.rs  letter_groups.rs  lib.rs  main.rs  models.rs  pali.rs  sc_data.rs
tests/: processing_from_definition.rs  run_tests.sh  see_also.rs  see_also_simple.md  see_also_simple_expect.md  simsapa_dictionary
tests/data/data with space/: ncped custom cover.md  ncped with space.md  ncped with space.xlsx
(+5 files in other folders)
