[package]
name = "simsapa_dictionary"
version = "0.3.0"
authors = ["Gambhiro <gambhiro.bhikkhu.85@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
regex = "1"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.6"
kankyo = "0.3"
clap = { version = "2.33", features = ["yaml"] }
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"
chrono = "0.4"
walkdir = "2.2"
zip = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
comrak = "0.6"
deunicode = "1.0"
calamine = "0.16"
xlsxwriter = "0.3"
html2md = "0.2"
handlebars = "2.0"
html2text = "0.2"
scraper = "0.12"

